hphp/hack/test/typecheck/concurrent/error/concurrent_use_error.php
<?hh

async function foo(): Awaitable<void> {
  concurrent {
    $x = await async {};
    await async {};
  }
}
